--- a/HDDClock/HDDClock.ioc
+++ b/HDDClock/HDDClock.ioc
@@ -7,19 +7,44 @@ Mcu.IP0=I2C1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP4=TIM2
+Mcu.IP5=TIM3
+Mcu.IP6=TIM4
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32F103R(8-B)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PA2
-Mcu.Pin1=PA3
-Mcu.Pin2=PA5
-Mcu.Pin3=PA13
-Mcu.Pin4=PA14
-Mcu.Pin5=PB6
-Mcu.Pin6=PB7
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.PinsNb=8
+Mcu.Pin0=PC13-TAMPER-RTC
+Mcu.Pin1=PC0
+Mcu.Pin10=PC5
+Mcu.Pin11=PC6
+Mcu.Pin12=PC7
+Mcu.Pin13=PC9
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PB6
+Mcu.Pin17=PB7
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin19=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin2=PC1
+Mcu.Pin20=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM3_VS_no_output1
+Mcu.Pin22=VP_TIM3_VS_no_output2
+Mcu.Pin23=VP_TIM3_VS_no_output3
+Mcu.Pin24=VP_TIM3_VS_no_output4
+Mcu.Pin25=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin26=VP_TIM4_VS_no_output1
+Mcu.Pin27=VP_TIM4_VS_no_output2
+Mcu.Pin28=VP_TIM4_VS_no_output3
+Mcu.Pin29=VP_TIM4_VS_no_output4
+Mcu.Pin3=PC2
+Mcu.Pin4=PC3
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA5
+Mcu.Pin9=PC4
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
@@ -35,8 +60,12 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM3_IRQn=true\:1\:0\:true\:false\:true\:true\:true
+NVIC.TIM4_IRQn=true\:1\:0\:true\:false\:true\:true\:true
+NVIC.USART2_IRQn=true\:2\:0\:true\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA1.Signal=S_TIM2_CH2
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -53,6 +82,46 @@ PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=H10
+PC0.Locked=true
+PC0.Signal=GPIO_Output
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=H1
+PC1.Locked=true
+PC1.Signal=GPIO_Output
+PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
+PC13-TAMPER-RTC.GPIO_Label=USER_BUTTON
+PC13-TAMPER-RTC.Locked=true
+PC13-TAMPER-RTC.Signal=GPIO_Input
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=HH
+PC2.Locked=true
+PC2.Signal=GPIO_Output
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=M10
+PC3.Locked=true
+PC3.Signal=GPIO_Output
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=M1
+PC4.Locked=true
+PC4.Signal=GPIO_Output
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=MM
+PC5.Locked=true
+PC5.Signal=GPIO_Output
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=S10
+PC6.Locked=true
+PC6.Signal=GPIO_Output
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=S1
+PC7.Locked=true
+PC7.Signal=GPIO_Output
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=COLON
+PC9.Locked=true
+PC9.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -81,30 +150,75 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true
-RCC.ADCFreqValue=8000000
-RCC.AHBFreq_Value=16000000
-RCC.APB1Freq_Value=16000000
-RCC.APB1TimFreq_Value=16000000
-RCC.APB2Freq_Value=16000000
-RCC.APB2TimFreq_Value=16000000
-RCC.FCLKCortexFreq_Value=16000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true
+RCC.ADCFreqValue=32000000
+RCC.AHBFreq_Value=64000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+RCC.APB1Freq_Value=32000000
+RCC.APB1TimFreq_Value=64000000
+RCC.APB2Freq_Value=64000000
+RCC.APB2TimFreq_Value=64000000
+RCC.FCLKCortexFreq_Value=64000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=16000000
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value
-RCC.MCOFreq_Value=16000000
-RCC.PLLCLKFreq_Value=16000000
-RCC.PLLMCOFreq_Value=8000000
-RCC.PLLMUL=RCC_PLL_MUL4
-RCC.SYSCLKFreq_VALUE=16000000
+RCC.HCLKFreq_Value=64000000
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value
+RCC.MCOFreq_Value=64000000
+RCC.PLLCLKFreq_Value=64000000
+RCC.PLLMCOFreq_Value=32000000
+RCC.PLLMUL=RCC_PLL_MUL16
+RCC.SYSCLKFreq_VALUE=64000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TimSysFreq_Value=16000000
-RCC.USBFreq_Value=16000000
+RCC.TimSysFreq_Value=64000000
+RCC.USBFreq_Value=64000000
+SH.S_TIM2_CH2.0=TIM2_CH2,Input_Capture2_from_TI2
+SH.S_TIM2_CH2.ConfNb=1
+TIM2.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
+TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV1
+TIM2.IPParameters=Channel-Input_Capture2_from_TI2,Prescaler,ClockDivision
+TIM2.Prescaler=64
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
+TIM3.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM3.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
+TIM3.Channel-Output\ Compare3\ No\ Output=TIM_CHANNEL_3
+TIM3.Channel-Output\ Compare4\ No\ Output=TIM_CHANNEL_4
+TIM3.ClockDivision=TIM_CLOCKDIVISION_DIV1
+TIM3.IPParameters=Channel-Output Compare1 No Output,Channel-Output Compare2 No Output,Channel-Output Compare3 No Output,Channel-Output Compare4 No Output,AutoReloadPreload,TIM_MasterOutputTrigger,Prescaler,ClockDivision
+TIM3.Prescaler=64
+TIM3.TIM_MasterOutputTrigger=TIM_TRGO_RESET
+TIM4.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM4.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
+TIM4.Channel-Output\ Compare3\ No\ Output=TIM_CHANNEL_3
+TIM4.Channel-Output\ Compare4\ No\ Output=TIM_CHANNEL_4
+TIM4.ClockDivision=TIM_CLOCKDIVISION_DIV1
+TIM4.IPParameters=Channel-Output Compare1 No Output,Channel-Output Compare2 No Output,Channel-Output Compare3 No Output,Channel-Output Compare4 No Output,Prescaler,ClockDivision
+TIM4.Prescaler=64
 USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode,BaudRate,Mode
 USART2.Mode=MODE_TX_RX
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM3_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM3_VS_no_output1.Signal=TIM3_VS_no_output1
+VP_TIM3_VS_no_output2.Mode=Output Compare2 No Output
+VP_TIM3_VS_no_output2.Signal=TIM3_VS_no_output2
+VP_TIM3_VS_no_output3.Mode=Output Compare3 No Output
+VP_TIM3_VS_no_output3.Signal=TIM3_VS_no_output3
+VP_TIM3_VS_no_output4.Mode=Output Compare4 No Output
+VP_TIM3_VS_no_output4.Signal=TIM3_VS_no_output4
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+VP_TIM4_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM4_VS_no_output1.Signal=TIM4_VS_no_output1
+VP_TIM4_VS_no_output2.Mode=Output Compare2 No Output
+VP_TIM4_VS_no_output2.Signal=TIM4_VS_no_output2
+VP_TIM4_VS_no_output3.Mode=Output Compare3 No Output
+VP_TIM4_VS_no_output3.Signal=TIM4_VS_no_output3
+VP_TIM4_VS_no_output4.Mode=Output Compare4 No Output
+VP_TIM4_VS_no_output4.Signal=TIM4_VS_no_output4
 board=custom
 isbadioc=false
