--- a/HDDClock/HDDClock.ioc
+++ b/HDDClock/HDDClock.ioc
@@ -48,8 +48,8 @@ Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
-MxCube.Version=6.0.1
-MxDb.Version=DB.6.0.0
+MxCube.Version=6.3.0
+MxDb.Version=DB.6.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -78,8 +78,12 @@ PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=LED1
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Pu
+PB6.GPIO_Pu=GPIO_PULLUP
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
+PB7.GPIOParameters=GPIO_Pu
+PB7.GPIO_Pu=GPIO_PULLUP
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
 PC0.GPIOParameters=GPIO_Label
@@ -132,7 +136,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F103RBTx
-ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.0
+ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.4
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
