--- a/HDDClock/HDDClock.ioc
+++ b/HDDClock/HDDClock.ioc
@@ -1,15 +1,26 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.MEMTOMEM.0.Direction=DMA_MEMORY_TO_MEMORY
+Dma.MEMTOMEM.0.Instance=DMA1_Channel1
+Dma.MEMTOMEM.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.MEMTOMEM.0.MemInc=DMA_MINC_DISABLE
+Dma.MEMTOMEM.0.Mode=DMA_NORMAL
+Dma.MEMTOMEM.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.MEMTOMEM.0.PeriphInc=DMA_PINC_DISABLE
+Dma.MEMTOMEM.0.Priority=DMA_PRIORITY_LOW
+Dma.MEMTOMEM.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=MEMTOMEM
+Dma.RequestsNb=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F1
-Mcu.IP0=I2C1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM2
-Mcu.IP5=TIM3
-Mcu.IP6=TIM4
+Mcu.IP0=DMA
+Mcu.IP1=I2C1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM2
+Mcu.IP6=TIM3
 Mcu.IP7=USART2
 Mcu.IPNb=8
 Mcu.Name=STM32F103R(8-B)Tx
@@ -29,14 +40,6 @@ Mcu.Pin19=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PC1
 Mcu.Pin20=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin21=VP_TIM3_VS_no_output1
-Mcu.Pin22=VP_TIM3_VS_no_output2
-Mcu.Pin23=VP_TIM3_VS_no_output3
-Mcu.Pin24=VP_TIM3_VS_no_output4
-Mcu.Pin25=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin26=VP_TIM4_VS_no_output1
-Mcu.Pin27=VP_TIM4_VS_no_output2
-Mcu.Pin28=VP_TIM4_VS_no_output3
-Mcu.Pin29=VP_TIM4_VS_no_output4
 Mcu.Pin3=PC2
 Mcu.Pin4=PC3
 Mcu.Pin5=PA1
@@ -44,7 +47,7 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA5
 Mcu.Pin9=PC4
-Mcu.PinsNb=30
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
@@ -61,8 +64,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.TIM3_IRQn=true\:1\:0\:true\:false\:true\:true\:true
-NVIC.TIM4_IRQn=true\:1\:0\:true\:false\:true\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART2_IRQn=true\:2\:0\:true\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA1.Signal=S_TIM2_CH2
@@ -154,7 +156,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_DMA_Init-DMA-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.ADCFreqValue=32000000
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -180,22 +182,9 @@ TIM2.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV1
 TIM2.IPParameters=Channel-Input_Capture2_from_TI2,Prescaler,ClockDivision
 TIM2.Prescaler=64
-TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM3.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
-TIM3.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
-TIM3.Channel-Output\ Compare3\ No\ Output=TIM_CHANNEL_3
-TIM3.Channel-Output\ Compare4\ No\ Output=TIM_CHANNEL_4
-TIM3.ClockDivision=TIM_CLOCKDIVISION_DIV1
-TIM3.IPParameters=Channel-Output Compare1 No Output,Channel-Output Compare2 No Output,Channel-Output Compare3 No Output,Channel-Output Compare4 No Output,AutoReloadPreload,TIM_MasterOutputTrigger,Prescaler,ClockDivision
+TIM3.IPParameters=Channel-Output Compare1 No Output,Prescaler
 TIM3.Prescaler=64
-TIM3.TIM_MasterOutputTrigger=TIM_TRGO_RESET
-TIM4.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
-TIM4.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
-TIM4.Channel-Output\ Compare3\ No\ Output=TIM_CHANNEL_3
-TIM4.Channel-Output\ Compare4\ No\ Output=TIM_CHANNEL_4
-TIM4.ClockDivision=TIM_CLOCKDIVISION_DIV1
-TIM4.IPParameters=Channel-Output Compare1 No Output,Channel-Output Compare2 No Output,Channel-Output Compare3 No Output,Channel-Output Compare4 No Output,Prescaler,ClockDivision
-TIM4.Prescaler=64
 USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode,BaudRate,Mode
 USART2.Mode=MODE_TX_RX
@@ -208,21 +197,5 @@ VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM3_VS_no_output1.Mode=Output Compare1 No Output
 VP_TIM3_VS_no_output1.Signal=TIM3_VS_no_output1
-VP_TIM3_VS_no_output2.Mode=Output Compare2 No Output
-VP_TIM3_VS_no_output2.Signal=TIM3_VS_no_output2
-VP_TIM3_VS_no_output3.Mode=Output Compare3 No Output
-VP_TIM3_VS_no_output3.Signal=TIM3_VS_no_output3
-VP_TIM3_VS_no_output4.Mode=Output Compare4 No Output
-VP_TIM3_VS_no_output4.Signal=TIM3_VS_no_output4
-VP_TIM4_VS_ClockSourceINT.Mode=Internal
-VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
-VP_TIM4_VS_no_output1.Mode=Output Compare1 No Output
-VP_TIM4_VS_no_output1.Signal=TIM4_VS_no_output1
-VP_TIM4_VS_no_output2.Mode=Output Compare2 No Output
-VP_TIM4_VS_no_output2.Signal=TIM4_VS_no_output2
-VP_TIM4_VS_no_output3.Mode=Output Compare3 No Output
-VP_TIM4_VS_no_output3.Signal=TIM4_VS_no_output3
-VP_TIM4_VS_no_output4.Mode=Output Compare4 No Output
-VP_TIM4_VS_no_output4.Signal=TIM4_VS_no_output4
 board=custom
 isbadioc=false
